1.增加搜索路线按钮

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     <TextView android:id="@+id/tvTest" android:layout_width="match_parent" android:layout_height="wrap_content">
         
     </TextView>
-	<EditText android:id="@+id/etSearch" android:layout_width="match_parent" android:layout_height="wrap_content"
+	<EditText android:id="@+id/etSearch" android:layout_width="200dp" android:layout_height="wrap_content"
 	    android:layout_below="@id/tvTest" android:inputType="text" android:imeOptions="actionSearch"
-	    android:singleLine="true"/>
+	    android:singleLine="true" />
+	<Button android:id="@+id/btnRoute" android:layout_width="wrap_content" android:layout_height="wrap_content"
+	    android:text="路线" android:layout_below="@id/tvTest" android:layout_toRightOf="@id/etSearch"/>
     <ListView android:id="@+id/listView1" android:layout_width="match_parent" android:layout_height="wrap_content"
         style="@style/listviewStyle" android:layout_below="@id/etSearch">
         
