--- a/res/layout/common_title_bar.xml
+++ b/res/layout/common_title_bar.xml
@@ -25,7 +25,7 @@
 			android:maxEms="9" android:textColor="@color/white" android:textSize="20sp" />
 	</LinearLayout>
 
-	<Button android:id="@+id/btnRight" android:layout_width="wrap_content"
+	<TextView android:id="@+id/tvRight" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:layout_alignParentRight="true"
 		android:layout_centerVertical="true" android:layout_marginRight="10dp"
 		android:clickable="true" android:focusable="true"
