--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -5,5 +5,5 @@
 	<!-- 使用的颜色 -->
 	<color name="common_bar">#e76b2b</color>
 	<color name="white">#ffffff</color>
-	<color name="bg_comment">#F2F2F2</color>
+	<color name="orange">#e76b2b</color>
 </resources>
