--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -26,4 +26,14 @@
         <item name="android:cacheColorHint">@android:color/transparent</item>
         <item name="android:fadingEdge">none</item>
     </style>
+    <style name="tab_btn_style">
+
+        <!-- 去除原生的单选按钮图标 -->
+        <item name="android:button">@null</item>
+        <item name="android:textSize">0dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
 </resources>
