1.界面的优化

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,15 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
     <RelativeLayout android:id="@+id/mainLayout" android:layout_width="match_parent" android:layout_height="match_parent" 
-        android:layout_above="@+id/footLayout">
+        android:layout_marginBottom="45dp">
         
     </RelativeLayout>
-    <FrameLayout android:id="@+id/footLayout" android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" android:layout_marginTop="-10dp">
+    <RelativeLayout android:id="@+id/footLayout" android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal">
         
-    </FrameLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</FrameLayout>
