--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -39,7 +39,8 @@
             </LinearLayout>
             
             <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="2" 
-                android:background="@drawable/bg_blue_selector" android:clickable="true" android:gravity="center">
+                android:background="@drawable/bg_blue_selector" android:clickable="true" android:gravity="center"
+                android:layout_marginTop="5dp">
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawablePadding="10dp"
                 android:text="我的" android:drawableTop="@drawable/home_ic_my" android:gravity="center"
                 android:textColor="@color/white" android:textSize="@dimen/home_item_text_size" android:layout_marginTop="5dp"/>
@@ -55,13 +56,15 @@
                 android:textColor="@color/white"  android:textSize="@dimen/home_item_text_size"/>
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="2" 
-                android:background="@drawable/bg_green_selector" android:clickable="true" android:gravity="center">
+                android:background="@drawable/bg_green_selector" android:clickable="true" android:gravity="center"
+                android:layout_marginTop="5dp">
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawablePadding="10dp"
                 android:text="停车费" android:drawableRight="@drawable/home_ic_parking_fee" android:gravity="center" 
                 android:textColor="@color/white" android:textSize="@dimen/home_item_text_size" android:layout_marginTop="5dp"/>
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="2" 
-                android:background="@drawable/bg_dark_blue_selector" android:clickable="true" android:gravity="center">
+                android:background="@drawable/bg_dark_blue_selector" android:clickable="true" android:gravity="center"
+                android:layout_marginTop="5dp">
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawablePadding="10dp"
                 android:text="赚P币" android:drawableRight="@drawable/home_ic_earn_parking_money" android:gravity="center"
                 android:textColor="@color/white"  android:textSize="@dimen/home_item_text_size" android:layout_marginTop="5dp"/>
