--- a/res/layout/history_search_parking_list.xml
+++ b/res/layout/history_search_parking_list.xml
@@ -9,18 +9,18 @@
 		android:background="@color/common_bar" android:layout_below="@+id/bar"
 		android:gravity="center_vertical">
 
-		<AutoCompleteTextView android:id="@+id/edSearch"
+		<EditText android:id="@+id/etSearch"
 			android:layout_width="match_parent" android:layout_height="47dp"
-			android:background="@drawable/bg_input_lookl_parking"
+			android:background="@drawable/bg_input_search_parking"
 			android:layout_margin="5dp" android:hint="请输入目的地" />
 
-		<ImageView android:id="@+id/lvSearch" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_alignRight="@+id/edSearch"
-			android:layout_alignTop="@+id/edSearch" android:src="@drawable/ic_search"
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_alignRight="@+id/etSearch"
+			android:layout_alignTop="@+id/etSearch" android:src="@drawable/ic_search"
 			android:layout_marginRight="5dp" android:layout_marginTop="2dp" />
 	</RelativeLayout>
 
-	<ListView android:id="@+id/lvSearchHistory" style="@style/listviewStyle"
+	<ListView android:id="@+id/lvSearch" style="@style/listviewStyle"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
 		android:layout_below="@+id/llSearch"></ListView>
 
