--- a/res/layout/park_item.xml
+++ b/res/layout/park_item.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="wrap_content"
-	android:layout_height="wrap_content" android:background="@drawable/bg_nearby_park_item">
+	android:orientation="vertical" android:layout_width="match_parent"
+	android:layout_height="wrap_content" android:background="@drawable/bg_nearby_park_item"
+	android:padding="12dp">
 
-	<RelativeLayout android:id="@+id/relativeLayout"
+	<View android:id="@+id/noeDot" android:layout_width="2dp"
+		android:layout_height="wrap_content" android:background="@drawable/park_list_line_repeat"
+		android:layout_alignParentLeft="true" android:layout_marginLeft="4.5dp"
+		android:layout_below="@+id/tvLocationPark" />
+	<TextView android:id="@+id/tvLocationPark"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:gravity="center">
+		android:drawableLeft="@drawable/ic_orange_location" android:text="  任命广场" />
 
-		<ImageView android:id="@+id/ivLocation"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/ic_orange_location" />
+	<TextView android:id="@+id/tvAddress" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:layout_alignParentLeft="true"
+		android:layout_below="@+id/tvLocationPark" android:drawableLeft="@drawable/ic_location_dot"
+		android:text="  地址：  浦东新区动车" android:layout_marginTop="6dp" />
 
-		<ImageView android:id="@+id/oneLine" android:layout_width="2dp"
-			android:layout_height="wrap_content" android:layout_below="@+id/ivLocation"
-			android:layout_centerHorizontal="true" android:src="@drawable/bg_location_line" />
-
-		<ImageView android:id="@+id/noeDot" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:src="@drawable/ic_location_dot"
-			android:layout_below="@+id/oneLine" android:layout_marginLeft="3dp" />
+	<TextView android:id="@+id/tvParkCost" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:drawableLeft="@drawable/ic_location_dot"
+		android:text="  10/小时" android:layout_below="@+id/tvAddress"
+		android:layout_marginTop="4dp" />
 
 
-		<ImageView android:id="@+id/towLine" android:layout_width="2dp"
-			android:layout_height="wrap_content" android:layout_below="@+id/noeDot"
-			android:layout_centerHorizontal="true" android:src="@drawable/bg_location_line" />
 
-		<ImageView android:id="@+id/towDot" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:src="@drawable/ic_location_dot"
-			android:layout_below="@+id/towLine" android:layout_marginLeft="3dp" />
+	<TextView android:id="@+id/tvDistance" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:layout_alignParentLeft="true"
+		android:layout_below="@+id/tvParkCost" android:drawableLeft="@drawable/ic_location_dot"
+		android:text="  距离200m  空车位5个" android:layout_marginTop="4dp" />
 
 
-		<ImageView android:id="@+id/threeLine" android:layout_width="2dp"
-			android:layout_height="wrap_content" android:layout_below="@+id/towDot"
-			android:layout_centerHorizontal="true" android:src="@drawable/bg_location_line" />
-
-		<ImageView android:id="@+id/threeDot" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:src="@drawable/ic_location_dot"
-			android:layout_below="@+id/threeLine" android:layout_marginLeft="3dp" />
-
-	</RelativeLayout>
 
 
+	<Button android:id="@+id/btnNavigation" android:layout_width="wrap_content"
+		android:layout_height="90dp" android:layout_alignBottom="@+id/tvNavigation"
+		android:layout_alignParentRight="true" android:background="@drawable/bg_btn_navigation"
+		android:gravity="center_vertical" android:textColor="@color/white"
+		android:textSize="18sp" android:paddingTop="25dp" android:text="导航"
+		android:paddingLeft="20dp" android:paddingRight="20dp" />
+
+	<TextView android:id="@+id/tvNavigation" android:layout_width="wrap_content"
+		android:layout_height="29dp" android:layout_alignBaseline="@+id/tvParkCost"
+		android:layout_alignBottom="@+id/tvParkCost"
+		android:layout_alignRight="@+id/btnNavigation"
+		android:layout_marginRight="27dp" android:drawablePadding="5dp"
+		android:drawableTop="@drawable/ic_gps" android:gravity="center_horizontal"
+		android:textSize="18sp" android:layout_marginBottom="-14dp" />
 
 </RelativeLayout>
