--- a/res/layout/park_item.xml
+++ b/res/layout/park_item.xml
@@ -5,7 +5,7 @@
 	android:padding="12dp">
 
 	<View android:id="@+id/noeDot" android:layout_width="2dp"
-		android:layout_height="wrap_content" android:background="@drawable/park_list_line_repeat"
+		android:layout_height="fill_parent" android:background="@drawable/park_list_line_repeat"
 		android:layout_alignParentLeft="true" android:layout_marginLeft="4.5dp"
 		android:layout_below="@+id/tvLocationPark" />
 	<TextView android:id="@+id/tvLocationPark"
@@ -34,7 +34,7 @@
 
 	<Button android:id="@+id/btnNavigation" android:layout_width="wrap_content"
 		android:layout_height="90dp" android:layout_alignBottom="@+id/tvNavigation"
-		android:layout_alignParentRight="true" android:background="@drawable/bg_btn_navigation"
+		android:layout_alignParentRight="true" android:background="@drawable/bg_navigation_btn"
 		android:gravity="center_vertical" android:textColor="@color/white"
 		android:textSize="18sp" android:paddingTop="25dp" android:text="导航"
 		android:paddingLeft="20dp" android:paddingRight="20dp" />
