--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 	
     <dimen name="home_item_text_size">20sp</dimen>
+    
+    <dimen name="small_text_size">13sp</dimen>
+    <dimen name="basic_text_size">14sp</dimen>
+    <dimen name="large_text_size">16sp</dimen>
+   
 </resources>
