--- a/res/layout/history_search_parking_item.xml
+++ b/res/layout/history_search_parking_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="match_parent"
-	android:layout_height="wrap_content" android:layout_marginTop="10dp"
-	android:layout_marginBottom="10dp">
+	android:layout_height="wrap_content">
 
 	<TextView android:id="@+id/tvAddress" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:text="人民广场"
-		android:textSize="15sp" android:textColor="#8f8f8f"
-		android:layout_marginLeft="15dp" />
+		android:textSize="16sp" android:textColor="#8f8f8f"
+		android:layout_marginLeft="15dp" android:layout_marginTop="20dp" />
 
 	<ImageView android:id="@+id/ivHisotoySerarch"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:src="@drawable/ic_search_history_error"
-		android:layout_alignParentRight="true" android:layout_marginRight="15dp" />
+		android:layout_alignParentRight="true" android:layout_marginRight="15dp"
+		android:layout_marginTop="20dp" />
 	<View android:layout_width="match_parent" android:layout_height="0.5dp"
 		android:background="#dfdfdf" android:layout_below="@+id/ivHisotoySerarch"
-		android:layout_marginTop="10dp" />
+		android:layout_marginTop="20dp" />
 
 </RelativeLayout>
