--- a/res/layout/history_search_parking_item.xml
+++ b/res/layout/history_search_parking_item.xml
@@ -12,9 +12,10 @@
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:src="@drawable/ic_search_history_error"
 		android:layout_alignParentRight="true" android:layout_marginRight="15dp"
-		android:layout_marginTop="20dp" />
+		android:layout_marginTop="20dp" android:visibility="gone" />
+
 	<View android:layout_width="match_parent" android:layout_height="0.5dp"
-		android:background="#dfdfdf" android:layout_below="@+id/ivHisotoySerarch"
+		android:background="#dfdfdf" android:layout_below="@+id/tvAddress"
 		android:layout_marginTop="20dp" />
 
 </RelativeLayout>
