--- a/res/layout/activity_search_parking.xml
+++ b/res/layout/activity_search_parking.xml
@@ -3,13 +3,30 @@
 	android:orientation="vertical" android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<include android:id="@+id/bar" layout="@layout/common_title_bar" />
+	<!-- <include android:id="@+id/bar" layout="@layout/common_title_bar" /> -->
+	<LinearLayout android:id="@+id/bar" android:layout_width="match_parent"
+		android:layout_height="55dp" android:background="@color/common_bar" 
+		android:orientation="horizontal" android:gravity="center">
+		<TextView android:id="@+id/tvTitle" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:ellipsize="end"
+			android:singleLine="true" android:lineSpacingExtra="1dp"
+			android:maxEms="9" android:textColor="@color/white" android:textSize="20sp" />
+	</LinearLayout>
+
+	<Button android:id="@+id/btnRight" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:layout_alignParentRight="true"
+		android:layout_centerVertical="true" android:layout_marginRight="10dp"
+		android:clickable="true" android:focusable="true"
+		android:paddingBottom="8dp" android:paddingRight="8dp"
+		android:paddingTop="8dp" android:paddingLeft="8dp" android:background="@null"
+		android:textColor="@android:color/white" android:visibility="gone" />
 	<RelativeLayout android:id="@+id/llSearch"
 		android:layout_width="match_parent" android:layout_height="70dp"
 		android:background="@color/common_bar" android:layout_below="@+id/bar"
 		android:gravity="center_vertical">
-
-		<TextView android:id="@+id/tvSearch" android:layout_width="match_parent"
+		
+	    
+		<TextView android:id="@+id/tvSearch" android:layout_width="270dp"
 			android:layout_height="47dp" android:background="@drawable/bg_input_search_parking"
 			android:layout_margin="5dp" android:hint="请输入目的地" android:gravity="center_vertical" />
 
@@ -17,6 +34,13 @@
 			android:layout_height="wrap_content" android:layout_alignRight="@+id/tvSearch"
 			android:layout_alignTop="@+id/tvSearch" android:src="@drawable/ic_search"
 			android:layout_marginRight="5dp" android:layout_marginTop="2dp" />
+		
+		<LinearLayout android:id="@+id/vo_Search" android:layout_width="wrap_content"
+			android:layout_height="wrap_content"  android:layout_toRightOf="@+id/tvSearch"
+			android:layout_alignTop="@+id/tvSearch">
+		    <ImageView android:layout_width="30dp"
+			android:layout_height="47dp" android:src="@drawable/vo_search" />
+		</LinearLayout>
 	</RelativeLayout>
 
 	<RelativeLayout android:id="@+id/llnearbyOrVoice"
@@ -33,8 +57,7 @@
 			android:layout_width="wrap_content" android:layout_height="100dp"
 			android:src="@drawable/ic_look_nearby" android:layout_marginLeft="30dp"
 			android:layout_marginTop="35dp" />
-
-
+		
 		<Button android:id="@+id/btnVoice" android:layout_width="match_parent"
 			android:layout_height="102dp" android:background="@drawable/bg_voice_look_parink_btn"
 			android:layout_marginTop="65dp" android:text="                语     音"
