语音小图标布局微调

--- a/res/layout/history_search_parking_list.xml
+++ b/res/layout/history_search_parking_list.xml
@@ -9,20 +9,20 @@
 		android:background="@color/common_bar" android:layout_below="@+id/bar"
 		android:gravity="center_vertical">
 
-		<EditText android:id="@+id/etSearch" android:layout_width="270dp"
+		<EditText android:id="@+id/etSearch" android:layout_width="match_parent"
 			android:layout_height="47dp" android:background="@drawable/bg_input_search_parking"
-			android:layout_margin="5dp" android:hint="请输入目的地" />
+			android:layout_margin="5dp" android:hint="请输入目的地" android:layout_toLeftOf="@+id/vo_Search"/>
 
 		<ImageView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_alignRight="@+id/etSearch"
 			android:layout_alignTop="@+id/etSearch" android:src="@drawable/ic_search"
 			android:layout_marginRight="5dp" android:layout_marginTop="2dp" />
 		
-		<LinearLayout android:id="@+id/vo_Search" android:layout_width="wrap_content"
-			android:layout_height="wrap_content"  android:layout_toRightOf="@+id/etSearch"
-			android:layout_alignTop="@+id/etSearch">
-		    <ImageView android:layout_width="30dp" android:layout_height="47dp" 
-			android:src="@drawable/vo_search" />
+		<LinearLayout android:id="@+id/vo_Search" android:layout_width="40dp"
+			android:layout_height="wrap_content"  android:layout_alignParentRight="true"
+			android:layout_marginTop="5dp" android:gravity="center_horizontal">
+		    <ImageView android:layout_width="30dp" android:layout_height="47dp"
+		         android:src="@drawable/vo_search" />
 		</LinearLayout>
 	</RelativeLayout>
 
