--- a/res/layout/voice_dialogue_left_litem.xml
+++ b/res/layout/voice_dialogue_left_litem.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent" android:layout_height="match_parent"
-	android:orientation="vertical">
-
-<TextView android:id="@+id/tv_left_voice_dialogue"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:text="欢迎来到停车宝，停车宝为你服务" />
+	android:orientation="vertical"
+	android:padding="5dp">
+	
+    
+    <TextView android:id="@+id/tv_left_voice_dialogue"
+	android:layout_width="wrap_content" android:layout_height="wrap_content"
+	android:layout_marginTop="5dp"
+	android:background="@drawable/bg_voice_left" android:text="欢迎来到停车宝，停车宝为你服务"  
+	android:gravity="center_vertical" android:textColor="@color/white" />
 
 </LinearLayout>
