1. 暂时先不做

--- a/res/layout/voice_dialogue_list.xml
+++ b/res/layout/voice_dialogue_list.xml
@@ -6,6 +6,8 @@
 	<include layout="@layout/common_title_bar" />
 
 	<ListView android:id="@+id/vdList"
-		android:layout_width="match_parent" android:layout_height="wrap_content">
+		android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
 	</ListView>
+	<Button android:id="@+id/btn" android:layout_width="match_parent" android:layout_height="wrap_content"
+	    android:text="单击说话"/>
 </LinearLayout>
