--- a/res/layout/voice_dialogue_left_litem.xml
+++ b/res/layout/voice_dialogue_left_litem.xml
@@ -5,7 +5,7 @@
 	android:padding="5dp">
 	
     
-    <TextView android:id="@+id/tv_left_voice_dialogue"
+    <TextView android:id="@+id/tvVoice"
 	android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:layout_marginTop="5dp"
 	android:background="@drawable/bg_voice_left" android:text="欢迎来到停车宝，停车宝为你服务"  
