--- a/res/layout/activity_search_parking.xml
+++ b/res/layout/activity_search_parking.xml
@@ -5,7 +5,7 @@
 
 	<!-- <include android:id="@+id/bar" layout="@layout/common_title_bar" /> -->
 	<LinearLayout android:id="@+id/bar" android:layout_width="match_parent"
-		android:layout_height="55dp" android:background="@color/common_bar" 
+		android:layout_height="55dp" android:background="@color/orange" 
 		android:orientation="horizontal" android:gravity="center">
 		<TextView android:id="@+id/tvTitle" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:ellipsize="end"
@@ -22,7 +22,7 @@
 		android:textColor="@android:color/white" android:visibility="gone" />
 	<RelativeLayout android:id="@+id/llSearch"
 		android:layout_width="match_parent" android:layout_height="70dp"
-		android:background="@color/common_bar" android:layout_below="@+id/bar"
+		android:background="@color/orange" android:layout_below="@+id/bar"
 		android:gravity="center_vertical">
 		
 		<TextView android:id="@+id/tvSearch" android:layout_width="match_parent"
