--- a/res/layout/park_item.xml
+++ b/res/layout/park_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:paddingLeft="10dp" android:paddingRight="10dp" android:orientation="vertical">
+<RelativeLayout 
 	android:orientation="vertical" android:layout_width="match_parent"
 	android:layout_height="wrap_content" android:background="@drawable/bg_nearby_park_item"
-	android:padding="12dp">
+	android:padding="10dp" android:layout_marginTop="8dp">
 
 	<View android:id="@+id/noeDot" android:layout_width="2dp"
 		android:layout_height="72dp" android:background="@drawable/park_list_line_repeat"
@@ -10,19 +13,19 @@
 		android:layout_below="@+id/tvLocationPark" android:layout_marginTop="-5dp"/>
 	<TextView android:id="@+id/tvLocationPark" android:drawablePadding="7dp"
 		android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true"
-		android:drawableLeft="@drawable/ic_orange_location" android:text="人民广场" 
-		android:textSize="@dimen/basic_text_size" android:singleLine="true"
+		android:drawableLeft="@drawable/ic_orange_location" 
+		android:textSize="@dimen/basic_text_size" android:singleLine="true" android:textColor="@color/dark"
 		android:ellipsize="end" android:layout_toLeftOf="@+id/viewNavigation" android:layout_marginRight="10dp"/>
 
 	<TextView android:id="@+id/tvAddress" android:layout_width="wrap_content" android:drawablePadding="5dp"
 		android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:singleLine="true"
 		android:ellipsize="end" android:layout_toLeftOf="@+id/viewNavigation" android:layout_marginRight="10dp"
 		android:layout_below="@+id/tvLocationPark" android:drawableLeft="@drawable/ic_location_dot"
-		android:text="  地址：  浦东新区动车" android:layout_marginTop="6dp" android:textSize="@dimen/small_text_size"/>
+		android:textColor="@color/light_dark" android:layout_marginTop="6dp" android:textSize="@dimen/small_text_size"/>
 
 	<TextView android:id="@+id/tvParkCost" android:layout_width="wrap_content" android:drawablePadding="5dp"
 		android:layout_height="wrap_content" android:drawableLeft="@drawable/ic_location_dot"
-		android:text="  10/小时" android:layout_below="@+id/tvAddress"
+		android:textColor="@color/light_dark" android:layout_below="@+id/tvAddress"
 		android:layout_marginTop="4dp" android:textSize="@dimen/small_text_size"/>
 
 
@@ -30,7 +33,7 @@
 	<TextView android:id="@+id/tvDistance" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:layout_alignParentLeft="true"
 		android:layout_below="@+id/tvParkCost" android:drawableLeft="@drawable/ic_location_dot"
-		android:text="  距离200m  空车位5个" android:layout_marginTop="4dp" 
+		android:textColor="@color/dark" android:layout_marginTop="4dp" 
 		android:textSize="@dimen/large_text_size" android:drawablePadding="5dp"/>
 
 
@@ -38,12 +41,12 @@
 
 	<LinearLayout android:id="@+id/viewNavigation" android:layout_width="wrap_content" android:layout_height="wrap_content"
 	    android:background="@drawable/bg_navigation_btn" android:paddingLeft="20dp" android:paddingRight="20dp"
-	    android:layout_alignParentRight="true" android:paddingTop="10dp" android:paddingBottom="10dp" 
+	    android:layout_alignParentRight="true" android:paddingTop="12dp" android:paddingBottom="12dp" 
 	    android:clickable="true" android:layout_centerVertical="true">
 	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
 		android:drawablePadding="5dp" android:textColor="@color/white"
 		android:text="导航" android:drawableTop="@drawable/ic_gps" android:layout_gravity="center"
-		android:textSize="18sp" />
+		android:textSize="@dimen/large_text_size" />
 	</LinearLayout>
-
 </RelativeLayout>
+</LinearLayout>
